Skoczona funkcjonalnosc androida, mozliwe jeszcze estetyczne zmiany

--- a/InzAndroid/AndroidManifest.xml
+++ b/InzAndroid/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity
             android:launchMode="singleInstance"
             android:name=".Main"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
